feta: service page anim

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "clsx": "^1.2.1",
+    "gsap": "^3.11.4",
     "jotai": "^2.0.3",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
